--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^1.3.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.3.0",
+    "@discordjs/voice": "^0.13.0",
+    "discord-api-types": "^0.37.16",
+    "discord-player": "^5.3.2",
     "discord.js": "^14.6.0",
     "djs-commands": "^1.2.2",
+    "ffmpeg": "^0.0.4",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   }
